fix css layout issues with objects overlay

--- a/webapp/public/App.css
+++ b/webapp/public/App.css
@@ -99,5 +99,8 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .video-container {
+    width: 640px;
+    height: 480px;
+    display: block;
     justify-content: center;
 }
