--- a/webapp/src/components/VideoFeed.module.css
+++ b/webapp/src/components/VideoFeed.module.css
@@ -1,7 +1,6 @@
 .videoFeedContainer {
     align-self: center;
-    justify-self: center;
-    justify-items: center;
+    min-width: 100%;
 }
 
 .videoFeedContainer img {
